  - (Tattletale) boomerang extended sprite remove from pixi.
  - (Tattletale) hammer extended sprite remove from pixi.
  - (Tattletale) src.zip is not packed anymore. If you want the source, get it in github.
  - (Tattletale) Graphic for Included Sprites has been removed.
  - (Tattletale) Added a file called removedResources.txt so you can get back these resources from elsewhere.
  

Version 1.2.9 (Feb 17, 2019):
  - (Tattletale) Fixed a bug with the Star.asm routine (provided by Blinddevil, reported by Darolac).
  - (Tattletale) Fixed a bug with ExtendedGetDrawInfo.asm (reported by Darolac, I think it was Sonikku who fixed this (?)).

Version 1.2.8 (Jan 20, 2019):
  -(Tattletale) Fixed a bug with sprite data in sa1 not being displaced correctly. This would cause random sprites to spawn when extension byte was used (didn't happen every time). Also added some doc/comments to main.asm while I was at it.

Version 1.2.7 (Jan 13, 2019):
  -(Tattletale) Routines ChangeMap16, ExtendedHurt, SubVertPos, SubHorzPos, SpawnSprite, GetMap16 and GetDrawInfo were updated so their top-most labels were removed and only sublabels are used within them to avoid issues with asar. Reported by DigitalSine.

Version 1.2.6 (Dec 30, 2018):
  -(Tattletale) Fixed an issue with ChangeMap16 in vertical levels.
  -(Tattletale) Fixed an issue with GetMap16 in vertical levels.

Version 1.2.5 (Dec 29, 2018):
  -(Tattletale) Fixed an inconsistency I left in main.asm that would cause a half-state of the perlevel feature to be inserted. Without -npl this would cause the first shooter or generator to not spawn properly.
  -(Tattletale) Perlevel sprite has been turned off by default.
  -(Tattletale) -npl doesn't do anything anymore, but is still around so stuff don't break with it.
  -(Tattletale) New flag -pl created so you can still use sprite perlevel feature.