@@ -93,7 +93,7 @@
 			PHY			;preserve Y
 			TYX			;transfer Y to X
 			LDA #$00                ;A:FF08 X:0007 Y:0000 D:0000 DB:01 S:01F3 P:envMXdizcHC:1172 VC:059 00 FL:2878
-			STA !1938,x             ;$41A800 in SA-1 ROM, so it can't be Y indexed!
+			STA.L !7FAF00,x             ;$41A800 in SA-1 ROM, so it can't be Y indexed!
 			PLY			;restore Y
 			PLX			;BlindEdit: alright back to the planning phase (restore X)
 
